<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.detail.DetailActivity">
    
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            tools:layout_width="160dp"
            tools:layout_height="200dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/detail_cv_poster"
            app:cardElevation="2dp"
            app:cardCornerRadius="4dp">

            <ImageView
                android:id="@+id/detail_iv_poster"
                android:layout_width="160dp"
                android:layout_height="200dp"
                android:contentDescription="@string/poster_film"
                tools:scaleType="centerCrop"
                android:layout_gravity="center"
                tools:src="@tools:sample/avatars" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/detail_tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/design_default_color_primary"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            tools:text="judul film"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/detail_cv_poster"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/detail_tv_release_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintBottom_toTopOf="@+id/detail_tv_score"
        app:layout_constraintEnd_toEndOf="@+id/detail_tv_title"
        app:layout_constraintStart_toStartOf="@+id/detail_tv_title"
        app:layout_constraintTop_toBottomOf="@+id/detail_tv_title"
        tools:text="19 mei 2020" />

    <TextView
        android:id="@+id/detail_tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/teal_700"
        android:textSize="32sp"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintBottom_toBottomOf="@+id/detail_cv_poster"
        app:layout_constraintEnd_toEndOf="@id/detail_tv_title"
        app:layout_constraintTop_toBottomOf="@+id/detail_tv_release_date"
        tools:text="75" />

        <TextView
            android:id="@+id/detail_placeholder_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="@color/design_default_color_on_secondary"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="@+id/detail_cv_poster"
            app:layout_constraintTop_toBottomOf="@+id/detail_cv_poster" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/detail_tv_score"
        app:layout_constraintTop_toBottomOf="@id/detail_placeholder_desc"
        tools:maxLines="5"
        android:id="@+id/detail_tv_desc"
        app:layout_constraintStart_toStartOf="@id/detail_placeholder_desc"
        tools:text="@tools:sample/lorem/random" />

</androidx.constraintlayout.widget.ConstraintLayout>