<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_unfavorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="unfavorite"
        app:showAsAction="always" />
</menu>